Refactor welcome overlay comments and fix HTML structure

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     #loginModal input:focus { border-color: #3b82f6; }
     #loginModal button { margin-top:12px; width:100%; }
 
-    /* Fullscreen welcome overlay */
+    /* ===========================
+       FULLSCREEN WELCOME OVERLAY
+       =========================== */
+
     #welcomeOverlay {
       position: fixed;
       inset: 0;
@@ -170,6 +173,8 @@
       font-size: 40px;
       transform-origin: center;
       color: #fefce8;
+      position: relative;
+      overflow: visible;
     }
 
     /* tiny floating sparkles around the logo */
@@ -765,7 +770,7 @@
               Ready to earn some credits?
             </div>
           </div>
-        </div>
+        </div>a
       </div>
     </div>
   </div>
