--- a/admin.html
+++ b/admin.html
@@ -183,6 +183,59 @@
     </div>
   </footer>
 
+  <!-- Extend Daily Limit Modal -->
+  <div
+    id="extendLimitModal"
+    class="fixed inset-0 bg-black/70 flex items-center justify-center z-50 hidden"
+  >
+    <div class="bg-slate-900 border border-slate-700 rounded-2xl p-5 w-full max-w-sm shadow-2xl">
+      <h2 class="text-lg font-bold mb-2 text-white">Extend Daily Limit</h2>
+      <p class="text-xs text-gray-400 mb-4">
+        Give this student extra daily minutes and optional bonus credits.
+      </p>
+
+      <div class="space-y-3">
+        <div>
+          <label class="block text-xs text-gray-300 mb-1">Extra minutes to add</label>
+          <input
+            type="number"
+            id="extendMinutesInput"
+            min="1"
+            class="w-full bg-gray-900 border border-gray-700 rounded-lg px-2 py-1 text-sm text-gray-100 outline-none focus:border-blue-500"
+            placeholder="e.g. 15"
+          />
+        </div>
+        <div>
+          <label class="block text-xs text-gray-300 mb-1">Bonus credits (optional)</label>
+          <input
+            type="number"
+            id="extendBonusInput"
+            min="0"
+            class="w-full bg-gray-900 border border-gray-700 rounded-lg px-2 py-1 text-sm text-gray-100 outline-none focus:border-emerald-500"
+            placeholder="e.g. 10"
+          />
+        </div>
+      </div>
+
+      <div id="extendLimitError" class="text-xs text-red-400 mt-2 h-4"></div>
+
+      <div class="mt-5 flex justify-end gap-2 text-xs">
+        <button
+          id="extendLimitCancel"
+          class="px-3 py-1 rounded-full bg-gray-800 text-gray-300 hover:bg-gray-700 border border-gray-700"
+        >
+          Cancel
+        </button>
+        <button
+          id="extendLimitConfirm"
+          class="px-4 py-1 rounded-full bg-emerald-600 text-white font-bold hover:bg-emerald-500 border border-emerald-500"
+        >
+          Apply
+        </button>
+      </div>
+    </div>
+  </div>
+
   <!-- Scripts -->
   <script type="module" src="./js/firebase.js"></script>
   <script type="module" src="./js/admin.js"></script>
