--- a/index.html
+++ b/index.html
@@ -637,8 +637,8 @@
               <h3 class="text-lg font-bold text-blue-400 mb-2"> Stable 1.0</h3>
               <div class="text-sm text-gray-300 space-y-3 leading-relaxed">
                 <p>
-                  Many bugs got fixed please hit CTRL SHIFT R to see the stable version. Chat is not working yet. 
-                  Earn 150 credits for sharing links in suggest/report.
+                  Many bugs got fixed please hit CTRL SHIFT R to see the stable version. 
+                  Earn 150 credits for sharing links in suggest/report. Chat is now working! Please report bugs
                 </p>
                 <p>Share the site with your <strong>Referral URL</strong> to gain credits! You get 50, they get 20.</p>
               </div>
