--- a/index.html
+++ b/index.html
@@ -485,6 +485,24 @@
 </head>
 <body class="page">
 
+  <!-- GLOBAL ATTENTION BANNER (non-dismissible) -->
+  <div id="attentionBanner" class="fixed top-0 left-0 right-0 z-[80]">
+    <div class="relative overflow-hidden bg-gradient-to-r from-amber-500 via-rose-500 to-violet-500 shadow-xl shadow-amber-900/40 border-b border-amber-300/50">
+      <div class="absolute inset-0 bg-[radial-gradient(circle_at_top,_rgba(255,255,255,0.25),_transparent_55%)] mix-blend-soft-light opacity-60 pointer-events-none"></div>
+      <div class="h-10 sm:h-12 flex items-center">
+        <div class="w-full">
+          <div class="relative w-full overflow-hidden">
+            <div class="inline-flex whitespace-nowrap animate-banner-marquee text-xs sm:text-sm md:text-base font-black tracking-[0.25em] uppercase text-slate-950 drop-shadow-[0_0_12px_rgba(255,255,255,0.75)]">
+              <span class="px-10">YOUR TEXT HERE • YOUR TEXT HERE • YOUR TEXT HERE • YOUR TEXT HERE • YOUR TEXT HERE • YOUR TEXT HERE •</span>
+              <span class="px-10">YOUR TEXT HERE • YOUR TEXT HERE • YOUR TEXT HERE • YOUR TEXT HERE • YOUR TEXT HERE • YOUR TEXT HERE •</span>
+              <span class="px-10">YOUR TEXT HERE • YOUR TEXT HERE • YOUR TEXT HERE • YOUR TEXT HERE • YOUR TEXT HERE • YOUR TEXT HERE •</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Modern global header using style.css, but preserving your IDs/buttons -->
  <!-- REPLACE your current <header id="header">...</header> with this block -->
 
@@ -558,6 +576,15 @@
         </button>
       </div>
 
+      <!-- Page nav extra: Suggest/report (kept) -->
+      <button
+        type="button"
+        onclick="window.location.href='suggestion.html'"
+        class="px-3 py-1.5 rounded-full text-xs font-medium text-gray-300 hover:text-white hover:bg-white/5 transition whitespace-nowrap"
+      >
+        Suggest/report
+      </button>
+
       <!-- Bell + Chat + Logout -->
       <div class="flex items-center gap-2 ml-3">
         <!-- Notifications bell -->
@@ -576,22 +603,15 @@
             </span>
           </button>
         </div>
-        <!-- inside .navbar-nav, with the other page buttons -->
-<button
-  type="button"
-  onclick="window.location.href='suggestion.html'"
-  class="px-3 py-1.5 rounded-full text-xs font-medium text-gray-300 hover:text-white hover:bg-white/5 transition whitespace-nowrap"
->
-  Suggest/report
-</button>
 
         <!-- Chat link -->
         <a
-  href="tutoring.html"
-  class="hidden sm:inline-flex items-center justify-center px-3 py-1.5 rounded-full text-xs font-semibold border border-blue-500/60 bg-blue-500/15 text-blue-300 hover:bg-blue-500/25 transition"
->
-  Chat
-</a>
+          href="tutoring.html"
+          class="hidden sm:inline-flex items-center justify-center px-3 py-1.5 rounded-full text-xs font-semibold border border-blue-500/60 bg-blue-500/15 text-blue-300 hover:bg-blue-500/25 transition"
+        >
+          Chat
+        </a>
+
         <!-- Logout -->
         <button
           id="logoutBtn"
