--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
       <div class="h-10 sm:h-11 flex items-center">
         <div class="w-full overflow-hidden">
           <div class="relative w-full">
-            <div class="inline-flex whitespace-nowrap banner-slide-text text-[10px] sm:text-xs md:text-sm font-black tracking-[0.35em] uppercase text-amber-200 drop-shadow-[0_0_10px_rgba(250,250,210,0.9)]">
+            <div class="inline-flex whitespace-nowrap banner-slide-text text-xs sm:text-sm md:text-base font-black tracking-[0.18em] uppercase text-amber-200 drop-shadow-[0_0_10px_rgba(250,250,210,0.9)]">
               <span class="px-10"> Share links/raw html for credits • Like the site? • Hire our dev team at $30/h • This site costed $90 •</span>
               <span class="px-10"> Please report bugs • This is v1 stable • Gloabal chat room now working!! • Private rooms comming soon •</span>
               <span class="px-10"> Report suspicous users • let us know what u want added • Hire our dev team for $30/h• Get credits for sharing links (150+)•</span>
