Modify background gradient of attention banner
Updated the background gradient in the attention banner for improved visual appearance.

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
     id="attentionBanner"
     class="mt-2 w-full"
   >
-    <div class="relative overflow-hidden border-y border-amber-300/40 bg-[radial-gradient(circle_at_top,_rgba(248,250,252,0.15),_transparent_55%),_linear-gradient(to_right,_#0f172a,_#1d283a,_#111827)] shadow-[0_10px_30px_rgba(15,23,42,0.9)]">
+   <div class="relative overflow-hidden border-y border-amber-300/40 bg-[radial-gradient(circle_at_top,_rgba(248,250,252,0.08),_transparent_55%),_linear-gradient(to_right,_#020617,_#0f172a,_#020617)] shadow-[0_10px_30px_rgba(15,23,42,0.9)]">
       <div class="absolute inset-0 pointer-events-none opacity-60 bg-[radial-gradient(circle_at_top,_rgba(251,191,36,0.32),_transparent_55%)] mix-blend-screen"></div>
 
       <div class="h-10 sm:h-11 flex items-center">
