--- a/tutoring.html
+++ b/tutoring.html
@@ -472,8 +472,8 @@
       <div class="title-block">
         <div class="badge">∞</div>
         <div class="title-text">
-          <h1>Global Chatroom</h1>
-          <span>Everyone talks in one room · powered by Firebase</span>
+          <h1>Math tutorials</h1>
+          <span> Chat room  · powered by AI </span>
         </div>
       </div>
       <div class="status-pill" id="status-pill">
@@ -487,7 +487,7 @@
       <div class="name-bar">
         <div class="name-label">
           <span class="dot"></span>
-          <span>Name</span>
+          <span>Name(REQUIRED)</span>
         </div>
         <div class="name-controls">
           <input
