--- a/tutoring.html
+++ b/tutoring.html
@@ -12,13 +12,9 @@
   <style>
     :root {
       --bg: #020617;
-      --bg-elevated: #020617;
-      --bg-alt: #020617;
-      --bg-soft: #020617;
       --accent: #6366f1;
       --accent-soft: rgba(99,102,241,0.15);
       --accent-soft-2: rgba(99,102,241,0.3);
-      --accent-strong: #4f46e5;
       --text: #e5e7eb;
       --text-dim: #9ca3af;
       --border-subtle: rgba(148,163,184,0.15);
@@ -37,44 +33,40 @@
     html, body {
       height: 100%;
       font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: radial-gradient(circle at top left, #111827 0, #020617 45%, #000 100%);
       color: var(--text);
+      background:
+        radial-gradient(circle at top left, #111827 0, #020617 45%, #000 100%);
     }
 
     body {
       display: flex;
-      justify-content: center;
-      align-items: stretch;
-      padding: 12px;
+      flex-direction: column;
+      min-height: 100vh;
+      overflow: hidden;
     }
 
+    /* FULL SCREEN APP SHELL */
     .app-shell {
-      width: 100%;
-      max-width: 1120px;
-      background: radial-gradient(circle at top left, rgba(30,64,175,0.5), rgba(15,23,42,0.96));
-      border-radius: 18px;
-      border: 1px solid rgba(148,163,184,0.25);
-      box-shadow:
-        0 26px 80px rgba(15,23,42,0.9),
-        0 0 0 1px rgba(15,23,42,0.8);
+      flex: 1;
       display: flex;
       flex-direction: column;
-      overflow: hidden;
-      backdrop-filter: blur(20px);
-      position: relative;
+      width: 100%;
+      height: 100%;
+      background:
+        radial-gradient(circle at top left, rgba(30,64,175,0.65), transparent 55%),
+        radial-gradient(circle at 120% 0, rgba(14,165,233,0.35), transparent 55%),
+        rgba(15,23,42,0.97);
+      backdrop-filter: blur(16px);
     }
 
     .app-header {
-      padding: 12px 18px;
+      padding: 10px 20px;
       display: flex;
       align-items: center;
       justify-content: space-between;
       border-bottom: 1px solid var(--border-subtle);
       background:
-        radial-gradient(circle at top left, rgba(79,70,229,0.7), transparent 55%),
-        radial-gradient(circle at 120% 0, rgba(14,165,233,0.4), transparent 55%),
-        rgba(15,23,42,0.96);
-      position: relative;
+        linear-gradient(90deg, rgba(15,23,42,0.97), rgba(15,23,42,0.9));
       z-index: 2;
     }
 
@@ -97,7 +89,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      box-shadow: 0 0 0 2px rgba(15,23,42,0.85);
+      box-shadow: 0 0 0 2px rgba(15,23,42,0.9);
       font-size: 18px;
       font-weight: 700;
       color: #020617;
@@ -134,7 +126,7 @@
       gap: 6px;
       padding: 4px 10px;
       border-radius: 999px;
-      background: rgba(15,23,42,0.95);
+      background: rgba(15,23,42,0.96);
       border: 1px solid var(--border-strong);
       font-size: 11px;
       color: var(--text-dim);
@@ -151,9 +143,9 @@
 
     .room-indicator {
       font-size: 11px;
-      padding: 4px 9px;
+      padding: 4px 10px;
       border-radius: 999px;
-      background: rgba(15,23,42,0.9);
+      background: rgba(15,23,42,0.96);
       border: 1px dashed rgba(148,163,184,0.5);
       color: var(--text-dim);
       max-width: 260px;
@@ -166,31 +158,41 @@
       color: #e5e7eb;
     }
 
-    .app-body {
-      display: flex;
-      flex: 1;
-      min-height: 0;
-      background: radial-gradient(circle at top left, rgba(15,23,42,0.9), rgba(2,6,23,0.98));
+    .room-indicator code {
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+      font-size: 11px;
+      background: rgba(15,23,42,0.9);
+      padding: 1px 5px;
+      border-radius: 999px;
+      border: 1px solid rgba(148,163,184,0.35);
     }
 
-    /* Layout: sidebar + main */
+    /* MAIN LAYOUT: SIDEBAR + CHAT */
+    .app-body {
+      flex: 1;
+      display: grid;
+      grid-template-columns: 290px minmax(0, 1fr);
+      grid-template-rows: 1fr;
+      min-height: 0;
+      min-width: 0;
+    }
+
     .sidebar {
-      width: 260px;
-      max-width: 260px;
       border-right: 1px solid var(--border-subtle);
       padding: 12px 12px 10px;
       display: flex;
       flex-direction: column;
       gap: 10px;
       background:
-        radial-gradient(circle at top left, rgba(30,64,175,0.35), transparent 55%),
-        rgba(15,23,42,0.96);
+        linear-gradient(180deg, rgba(15,23,42,0.96), rgba(15,23,42,0.98));
+      overflow-y: auto;
     }
 
     .sidebar-section {
       border-radius: 12px;
-      border: 1px solid rgba(148,163,184,0.15);
-      background: radial-gradient(circle at top, rgba(15,23,42,0.98), rgba(15,23,42,1));
+      border: 1px solid rgba(148,163,184,0.18);
+      background:
+        radial-gradient(circle at top, rgba(15,23,42,0.98), rgba(15,23,42,1));
       padding: 10px;
       display: flex;
       flex-direction: column;
@@ -228,7 +230,8 @@
       border: 1px solid rgba(148,163,184,0.4);
       padding: 7px 10px;
       font-size: 13px;
-      background: radial-gradient(circle at top left, rgba(148,163,184,0.2), rgba(15,23,42,0.98));
+      background:
+        radial-gradient(circle at top left, rgba(148,163,184,0.2), rgba(15,23,42,0.98));
       color: var(--text);
       outline: none;
       transition: border-color 0.15s ease, box-shadow 0.15s ease, background 0.15s ease;
@@ -241,7 +244,8 @@
     .input:focus {
       border-color: var(--accent);
       box-shadow: 0 0 0 1px rgba(99,102,241,0.7), 0 10px 26px rgba(15,23,42,0.85);
-      background: radial-gradient(circle at top left, rgba(99,102,241,0.25), rgba(15,23,42,0.98));
+      background:
+        radial-gradient(circle at top left, rgba(99,102,241,0.25), rgba(15,23,42,0.98));
     }
 
     .btn {
@@ -250,7 +254,8 @@
       padding: 7px 12px;
       font-size: 12px;
       font-weight: 500;
-      background: radial-gradient(circle at top left, rgba(99,102,241,0.85), rgba(79,70,229,1));
+      background:
+        radial-gradient(circle at top left, rgba(99,102,241,0.9), rgba(79,70,229,1));
       color: white;
       cursor: pointer;
       display: inline-flex;
@@ -265,7 +270,8 @@
     .btn:hover {
       transform: translateY(-1px);
       box-shadow: 0 18px 40px rgba(79,70,229,0.75);
-      background: radial-gradient(circle at top left, rgba(129,140,248,1), rgba(99,102,241,1));
+      background:
+        radial-gradient(circle at top left, rgba(129,140,248,1), rgba(99,102,241,1));
     }
 
     .btn:active {
@@ -347,16 +353,22 @@
       white-space: nowrap;
     }
 
-    /* Main chat area */
+    .copy-row .btn {
+      flex-shrink: 0;
+    }
+
+    /* MAIN CHAT PANEL */
     .main-panel {
-      flex: 1;
       display: flex;
       flex-direction: column;
       min-width: 0;
+      min-height: 0;
+      background:
+        radial-gradient(circle at top left, rgba(15,23,42,0.9), rgba(2,6,23,1));
     }
 
     .name-bar {
-      padding: 10px 14px 8px;
+      padding: 8px 16px;
       border-bottom: 1px solid var(--border-subtle);
       background: rgba(15,23,42,0.96);
       display: flex;
@@ -381,21 +393,11 @@
       background: rgba(148,163,184,0.8);
     }
 
-    .name-controls {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      flex: 1;
-      min-width: 180px;
-    }
-
     .messages-container {
       flex: 1;
       min-height: 0;
-      padding: 12px 10px 6px;
-      background: radial-gradient(circle at top left, rgba(15,23,42,0.85), rgba(2,6,23,1));
+      padding: 12px 12px 8px;
       overflow-y: auto;
-      scroll-behavior: smooth;
       position: relative;
     }
 
@@ -412,7 +414,7 @@
       text-align: center;
       font-size: 11px;
       color: var(--text-dim);
-      margin: 8px 0;
+      margin: 6px 0 10px;
     }
 
     .system-chip {
@@ -447,7 +449,8 @@
       width: 26px;
       height: 26px;
       border-radius: 999px;
-      background: radial-gradient(circle at 20% 20%, rgba(129,140,248,0.9), rgba(56,189,248,0.9));
+      background:
+        radial-gradient(circle at 20% 20%, rgba(129,140,248,0.9), rgba(56,189,248,0.9));
       display: inline-flex;
       align-items: center;
       justify-content: center;
@@ -488,14 +491,16 @@
       font-size: 13px;
       line-height: 1.35;
       border: 1px solid rgba(148,163,184,0.4);
-      background: radial-gradient(circle at top left, rgba(15,23,42,0.98), rgba(15,23,42,1));
+      background:
+        radial-gradient(circle at top left, rgba(15,23,42,0.98), rgba(15,23,42,1));
       color: var(--text);
       word-wrap: break-word;
       white-space: pre-wrap;
     }
 
     .message-row.self .bubble {
-      background: radial-gradient(circle at top left, var(--accent-soft-2), var(--accent-soft));
+      background:
+        radial-gradient(circle at top left, var(--accent-soft-2), var(--accent-soft));
       border-color: rgba(129,140,248,0.7);
       box-shadow: 0 16px 32px rgba(79,70,229,0.5);
     }
@@ -505,13 +510,15 @@
     }
 
     .message-row.self .message-avatar {
-      background: radial-gradient(circle at 20% 20%, rgba(96,165,250,1), rgba(94,234,212,1));
+      background:
+        radial-gradient(circle at 20% 20%, rgba(96,165,250,1), rgba(94,234,212,1));
     }
 
     .message-input-bar {
       border-top: 1px solid var(--border-subtle);
-      padding: 8px 12px;
-      background: linear-gradient(180deg, rgba(15,23,42,0.98), rgba(2,6,23,1));
+      padding: 8px 14px;
+      background:
+        linear-gradient(180deg, rgba(15,23,42,0.98), rgba(2,6,23,1));
       display: flex;
       align-items: center;
       gap: 8px;
@@ -524,7 +531,8 @@
       gap: 6px;
       border-radius: 999px;
       padding: 5px 10px;
-      background: radial-gradient(circle at top left, rgba(148,163,184,0.18), rgba(15,23,42,1));
+      background:
+        radial-gradient(circle at top left, rgba(148,163,184,0.18), rgba(15,23,42,1));
       border: 1px solid rgba(148,163,184,0.5);
     }
 
@@ -561,7 +569,7 @@
 
     .error-banner {
       position: absolute;
-      bottom: 76px;
+      bottom: 80px;
       left: 50%;
       transform: translateX(-50%);
       background: rgba(248,113,113,0.97);
@@ -587,68 +595,38 @@
       background: #b91c1c;
     }
 
-    /* Mobile tweaks */
-    @media (max-width: 840px) {
-      body {
-        padding: 6px;
-      }
-
-      .app-shell {
-        border-radius: 14px;
-      }
-
+    /* RESPONSIVE */
+    @media (max-width: 900px) {
       .app-body {
-        flex-direction: column;
+        grid-template-columns: minmax(0, 1fr);
+        grid-template-rows: auto 1fr;
       }
 
       .sidebar {
-        width: 100%;
-        max-width: 100%;
         border-right: none;
         border-bottom: 1px solid var(--border-subtle);
-        order: 1;
+        max-height: 260px;
       }
 
       .main-panel {
-        order: 2;
-      }
-
-      .messages-container {
-        padding: 10px 8px 6px;
-      }
-
-      .message-body {
-        max-width: 88%;
-      }
-
-      .hint-text {
-        display: none;
-      }
-
-      .room-indicator {
-        max-width: 180px;
+        min-height: 0;
       }
     }
 
-    @media (max-width: 520px) {
-      .status-group {
-        justify-content: flex-start;
-        margin-top: 6px;
-      }
-
+    @media (max-width: 640px) {
       .app-header {
         flex-direction: column;
         align-items: flex-start;
         gap: 6px;
       }
 
-      .name-bar {
-        align-items: stretch;
+      .status-group {
+        justify-content: flex-start;
       }
 
-      .name-controls {
+      .name-bar {
         flex-direction: column;
-        align-items: stretch;
+        align-items: flex-start;
       }
     }
   </style>
@@ -677,7 +655,7 @@
     </header>
 
     <div class="app-body">
-      <!-- LEFT SIDEBAR -->
+      <!-- SIDEBAR -->
       <aside class="sidebar">
         <!-- Display Name -->
         <section class="sidebar-section">
@@ -693,10 +671,10 @@
               placeholder="Pick a name people will see in chat"
               maxlength="32"
             />
-            <button id="set-name-btn" class="btn sm secondary">Save</button>
+            <button id="set-name-btn" class="btn sm secondary" type="button">Save</button>
           </div>
           <div class="hint-text">
-            Your name is shared across all rooms. Be nice. No personal info.
+            Your name is shared across all rooms. Be kind. No personal info.
           </div>
         </section>
 
@@ -716,7 +694,7 @@
             </button>
           </div>
 
-          <hr style="border: none; border-top: 1px dashed rgba(148,163,184,0.25); margin: 6px 0;" />
+          <hr style="border:none; border-top:1px dashed rgba(148,163,184,0.25); margin:6px 0;" />
 
           <!-- Private room creation -->
           <div class="room-summary" id="private-room-summary">
@@ -735,7 +713,7 @@
             </div>
           </div>
 
-          <hr style="border: none; border-top: 1px dashed rgba(148,163,184,0.25); margin: 6px 0;" />
+          <hr style="border:none; border-top:1px dashed rgba(148,163,184,0.25); margin:6px 0;" />
 
           <!-- Join by code -->
           <div class="section-title">
@@ -759,7 +737,7 @@
             <strong>Tip:</strong> Codes are case-sensitive.
           </div>
 
-          <hr style="border: none; border-top: 1px dashed rgba(148,163,184,0.25); margin: 6px 0;" />
+          <hr style="border:none; border-top:1px dashed rgba(148,163,184,0.25); margin:6px 0;" />
 
           <div class="hint-text">
             Anti-spam: max 2 msgs / second (server) + ~3s local cooldown after bursts.
@@ -790,6 +768,11 @@
               </span>
             </div>
           </div>
+
+          <div class="error-banner" id="error-banner">
+            <span class="error-dot"></span>
+            <span id="error-text"></span>
+          </div>
         </div>
 
         <div class="message-input-bar">
@@ -802,17 +785,12 @@
               maxlength="2000"
             />
           </div>
-          <button id="send-btn" class="btn disabled">
+          <button id="send-btn" class="btn disabled" type="button">
             <span>Send</span>
           </button>
           <div class="cooldown-indicator" id="cooldown-indicator">
             <span>ready</span>
           </div>
-        </div>
-
-        <div class="error-banner" id="error-banner">
-          <span class="error-dot"></span>
-          <span id="error-text"></span>
         </div>
       </main>
     </div>
