Update styling for copy-row code elements
Enhanced styling for code elements in copy-row.

--- a/tutoring.html
+++ b/tutoring.html
@@ -346,12 +346,18 @@
       gap: 6px;
     }
 
-    .copy-row code {
-      flex: 1;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
+   .copy-row code {
+  flex: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-weight: 600;
+  color: #fbbf24;
+  background: rgba(30,64,175,0.8);
+  padding: 4px 8px;
+  border-radius: 999px;
+  border: 1px solid rgba(250,204,21,0.8);
+}
 
     .copy-row .btn {
       flex-shrink: 0;
