Update banner text in index.html

--- a/index.html
+++ b/index.html
@@ -618,8 +618,8 @@
           <div class="relative w-full">
             <div class="inline-flex whitespace-nowrap banner-slide-text text-xs sm:text-sm md:text-base font-black tracking-[0.18em] uppercase text-amber-200 drop-shadow-[0_0_10px_rgba(250,250,210,0.9)]">
               <span class="px-10"> Share links/raw html for credits • Like the site? • Hire our dev team at $30/h • This site costed $90 •</span>
-              <span class="px-10"> Please report bugs • This is v1 stable • Gloabal chat room now working!! • Private rooms comming soon •</span>
-              <span class="px-10"> Site made with 100% AI • let us know what u want added • Hire our dev team for $30/h• Get credits for sharing links (150+)•</span>
+              <span class="px-10"> Please report bugs • This is v1 stable • Gloabal and Private chat room now working!! • Share links for credits •</span>
+              <span class="px-10">  Hire our dev team • let us know what u want added • Hire our dev team for $30/h• Get credits for sharing links (150+)•</span>
             </div>
           </div>
         </div>
